# inverted_pendulum_

./: README.md  control_node.py  minimal_rail.sdf  model.sdf  sim.launch.py  working_pendulum.world
gazebo/: crazyflie_pendulum_world.sdf
gazebo/inverted_pendulum/: buffer  model.sdf
gazebo/test_crazyflie/: model.sdf
ros2/crazyflie_pendulum_sim/: package.xml  setup.cfg  setup.py
ros2/crazyflie_pendulum_sim/launch/: sim.launch.py
ros2/pendulum_pkg/: package.xml  setup.cfg  setup.py
ros2/pendulum_pkg/pendulum_pkg/: control_node (copy).py  control_node.py
