<?xml version="1.0"?>
<package format="3">
  <name>crazyflie_pendulum_sim</name>
  <version>0.0.1</version>
  <description>Crazyflie simulation launch package</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
